--- a/practiceCSS.css
+++ b/practiceCSS.css
@@ -50,6 +50,7 @@ header {
 }
 
 /*main*/
+
 .container {
     width: 100vw;
 }
@@ -87,23 +88,74 @@ header {
 .main {
     width: 100%;
     height: 100vh;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-
+    display: grid;
+    place-items: center;
+    grid-template-columns: 1fr 1fr;
+    margin: 10rem 0;
 }
 
 .view-items {
-    width: 40%;
+    width: 70%;
+    height: 90%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    gap: 2rem;
 }
 
 .console-img {
-    width: 40%;
-    height: 300px;
+    width: 100%;
+    height: 100%;
+    background-image: url(./img/blocks.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat
+}
+
+.words {
+    font-size: 28px;
+    font-weight: 500;
+    overflow-y: hidden;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--primary-color);
+}
+
+.price {
+    font-size: 20px;
+    font-weight: normal;
+}
+
+.banner {
+    width: 100%;
+    height: 40rem;
+    object-fit: cover;
+    object-position: center;
+    margin: 10rem 0;
+}
+
+.mid-banner {
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 10rem 0;
+}
+
+.items {
+    width: 65%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+}
+
+.blocks-img {
+    width: 100%;
+    height: 100%;
+    background-image: url(./img/items.jpg);
+    background-position: center;
+    background-size: cover;
 }
 
 /*footer*/
@@ -119,12 +171,12 @@ footer {
 }
 
 .title {
-    width: 10%;
     display: flex;
     flex-direction: column;
     font-weight: 500;
     padding-top: 5rem;
     gap: 2rem;
+    flex-wrap: wrap;
 }
 
 footer li {
@@ -144,13 +196,13 @@ footer li {
     gap: 10px;
 }
 
-button {
+.submit-btn {
+    width: 300px;
+    color: var(--primary-color);
     background-color: var(--pink);
     border-radius: 50px;
-    min-height: 30px;
-    min-width: 120px;
-    border: none;
-
+    display: grid;
+    place-items: center;
 }
 
 #instagram,
